test/files/neg/t4882.scala
class Foo(value: Int) {
  implicit def this(a: String) = this(a.toInt)
}
