test/files/neg/t4882.check
t4882.scala:2: error: `implicit` modifier not allowed for constructors
  implicit def this(a: String) = this(a.toInt)
               ^
1 error
